tests/baselines/reference/allowSyntheticDefaultImports10.errors.txt
tests/cases/compiler/a.ts(2,5): error TS2339: Property 'default' does not exist on type 'typeof import("tests/cases/compiler/b")'.
tests/cases/compiler/a.ts(3,5): error TS2339: Property 'default' does not exist on type 'typeof import("tests/cases/compiler/b")'.


==== tests/cases/compiler/a.ts (2 errors) ====
    import Foo = require("./b");
    Foo.default.bar();
        ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'typeof import("tests/cases/compiler/b")'.
    Foo.default.default.foo();
        ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'typeof import("tests/cases/compiler/b")'.
==== tests/cases/compiler/b.d.ts (0 errors) ====
    export function foo();
    
    export function bar();
    